# overseer

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 83704023398b_add_student_message_table.py  9706635a76be_fix_message_group_type.py  a4e6609c3a50_add_created_at.py  b0f0103ff177_add_course_field.py  b4a73ef55369_add_created_at.py  ee49be1a242a_add_thread_ticket_sub_table.py
app/: config.py  entrypoint.sh  main.py
app/api/: models.py  router.py
app/service/: models.py  pachca_client.py
app/service/event_processing/: pachca_events.py  tracker_events.py
app/service/orm/: models.py  sessionmaker.py
app/service/pachca_client/: __init__.py  client.py  models.py
app/service/tasks/: response_sla_notification.py
app/service/telegram_client/: __init__.py  client.py
sandbox/: test_get_member.py
tests/: conftest.py  test_pachca_events.py  test_tasks.py  test_tracker_events.py
