[project]
name = "overseer"
version = "0.1.0"
description = ""
authors = [
    {name = "judicator",email = "yarik200027@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic==1.14.1",
    "aiohttp==3.11.13",
    "aiosqlite==0.21.0",
    "asyncpg==0.30.0",
    "fastapi[all]==0.115.6",
    "loguru==0.7.3",
    "mypy==1.15.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pytest==8.3.4",
    "pytest_asyncio==0.25.3",
    "sqlalchemy[asyncio]==2.0.37",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
